[package]
name = "hyperspace"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew", rev = "69e3b5f8", features = ["csr"] }
wasm-bindgen = "0.2"

web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
rand = "0.8"